methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:4: error: too many arguments for method droite: ()Unit
  droite(6)
        ^